[package]
name = "kohios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
async-graphql = "4.0.13"
async-graphql-axum = "4.0.13"
axum = { version = "0.5.1", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
